# chip8-rust

./: .gitignore  Cargo.toml  README.md  deploy.sh
docs/: chip8_rust.js  index.html  index.js  package.json
pkg/: README.md  chip8_rust.d.ts  chip8_rust_bg.wasm  chip8_rust_bg.wasm.d.ts
src/: cpu.rs  lib.rs  main.rs  renderer.rs
