[package]
name = "chip8_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"]}
wasm-bindgen = "0.2"
web-sys = { version = "0.3.76", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Window", "Document", "console"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"]}

[lib]
crate-type = ["cdylib", "rlib"]